--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
-<h1> NishaNotaryServices </h1>
-<h2> Email Address <h2>
+<HTML>
+  <head>
+    <title>
+      NishaNotaryServices
+    </title>
+      </head>
+      </html>
