--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   </head>
     <title> Nisha's Notary Services </title>
     <hr/><br/>
-  <body>
-    <p>Hello everyone...I am starting a new <b><i>NOTARY SERVICE</i></b>. In this, I will do a lot of things that notary people do. I am a new comer. The first fee will be 2<sup>2</sup></p>
-    <h1>THE STARTING FEE WILL BE $4</h1>
-    <!--<p style="color:blue;background-color:Aqua;"></p> -->
+  <body style="background-color:Aqua;">
+    <p style="color:blue;>Hello everyone...I am starting a new <b><i>NOTARY SERVICE</i></b>. In this, I will do a lot of things that notary people do. I am a new comer. The first fee will be 2<sup>2</sup></p>
+    <h1 style="color:green;">THE STARTING FEE WILL BE $4</h1>
   </body>
 </html>
   
