--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title> Nisha's Notary Services </title>
     <hr/><br/>
   <body style="background-color:Aqua;">
-    <p style="color:purple;"><h1>Hello everyone...I am starting a new <b><i>NOTARY SERVICE</i></b>. In this, I will do a lot of things that notary people do. I am a new comer. The first fee will be 2<sup>2</sup></h1></p>
+    <h1 style="color:purple;">Hello everyone...I am starting a new <b><i>NOTARY SERVICE</i></b>. In this, I will do a lot of things that notary people do. I am a new comer. The first fee will be 2<sup>2</sup></h1>
     <h1 style="color:green;">THE STARTING FEE WILL BE $4</h1>
   </body>
 </html>
