--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
   <head>
     
   </head>
-    <title> Nisha's Notary Services </title>
-    <hr/><br/>
+    <title> Nisha Notary Services </title>
   <body style="background-color:Aqua;">
-    <h1 style="color:purple;">Hello everyone...I am starting a new <b><i>NOTARY SERVICE</i></b>. In this, I will do a lot of things that notary people do. I am a new comer. The first fee will be 2<sup>2</sup></h1>
-    <h1 style="color:green;">THE STARTING FEE WILL BE $4</h1>
+    <h1> Nisha Notary Services </h1>
+    <hr/><br/>
+    <h1 style="color:purple;">Hello everyone...I am starting a new <b><i>NOTARY SERVICE</i></b>. In this, I will also do mobile notary services.</h1>
+    <h1 style="color:green;">THE STARTING FEE WILL BE $4 PER SIGNATURE</h1>
   </body>
 </html>
   
