--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     
   </head>
   <br/><br/>
-    <title>                               Nisha Notary Services </title>
+    <title>Nisha Notary Services </title>
   <body style="background-color:Aqua;">
-    <h1> Nisha Notary Services </h1>
+    <h1><b>                           Nisha Notary Services </b></h1>
     <hr/><br/>
     <h1 style="color:purple;">Hello everyone...I am starting a new <b><i>NOTARY SERVICE</i></b>. In this, I will also do mobile notary services.</h1>
     <h1 style="color:green;">THE STARTING FEE WILL BE $4 PER SIGNATURE</h1>
