--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <br/><br/>
     <title>Nisha Notary Services </title>
   <body style="background-color:Aqua;">
-    <h1><b>                           Nisha Notary Services </b></h1>
-    <hr/><br/>
+    <h1><br/>Nisha Notary Services </b></h1>
+   <!-- <hr/><br/>
     <h1 style="color:purple;">Hello everyone...I am starting a new <b><i>NOTARY SERVICE</i></b>. In this, I will also do mobile notary services.</h1>
-    <h1 style="color:green;">THE STARTING FEE WILL BE $4 PER SIGNATURE</h1>
+    <h1 style="color:green;">THE STARTING FEE WILL BE $4 PER SIGNATURE</h1> -->
   </body>
 </html>
   
