--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   </head>
   <br/><br/>
     <title>Nisha Notary Services </title>
-  <body style="background-color:Aqua;">
+  <body style="background-color:lightblue;">
     <h1><br/>Nisha Notary Services </b></h1>
    <!-- <hr/><br/>
     <h1 style="color:purple;">Hello everyone...I am starting a new <b><i>NOTARY SERVICE</i></b>. In this, I will also do mobile notary services.</h1>
