--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Nisha Notary Services </title>
   <body style="background-color:lightblue;">
     <h1><br/>Nisha Notary Services </b></h1>
+  <h1>Testing Start</h1>
+  <a href ="mailto:nisha.rpk@gmail.com" class="fa fa-envelope" style="font-size:20px;">
+    ::before
+    <u>nisha.rpk@gmail.com</u>
+  </a>
+  <br>
+  <h1>Testing End</h1>
    <!-- <hr/><br/>
     <h1 style="color:purple;">Hello everyone...I am starting a new <b><i>NOTARY SERVICE</i></b>. In this, I will also do mobile notary services.</h1>
     <h1 style="color:green;">THE STARTING FEE WILL BE $4 PER SIGNATURE</h1> -->
