--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body style="background-color:lightblue;">
     <h1><br/>Nisha Notary Services </b></h1>
   <div class="container">
-    <div class="elementor-widg>et-container"> == $0
+    <div class="elementor-widg>et-container"> 
   <a href ="mailto:nisha.rpk@gmail.com" class="fa fa-envelope" style="font-size:20px;">
     
     <u>nisha.rpk@gmail.com</u>
