--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
     <h1><br/>Nisha Notary Services </b></h1>
   <div class="container">
     <div class="elementor-widg>et-container"> 
-  <a href ="mailto:nisha.rpk@gmail.com" class="fa fa-envelope" style="font-size:20px;">
+      <a></a>
+      <br>
+      <a href style="font-size:20px;">
+      </a>
+      <br>
+   <a href ="mailto:nisha.rpk@gmail.com" class="fa fa-envelope" style="font-size:30px;">
     
     <u>nisha.rpk@gmail.com</u>
   </a>
