--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </div>
    <!-- <hr/><br/>
     <h1 style="color:purple;">Hello everyone...I am starting a new <b><i>NOTARY SERVICE</i></b>. In this, I will also do mobile notary services.</h1>
-    <h1 style="color:green;">THE STARTING FEE WILL BE $4 PER SIGNATURE</h1> -->
+    <h1 style="color:green;">THE STARTING FEE WILL BE $4 PER SIGNATURE</h1> 
   </body>
 </html>
 -->
