--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <html lang="en-US">
-  <head>...</head>
+  <head></head>
   <body class="home page-template-default page page-id-28">
     <div class="clear"></div>
     <header class="headwrapper">
       <div class="wrapper" id="wrapper-1">
         <div class="container" id="container-1">
-          ::before
+          <!-- ::before -->
           <div class="row">
-            ::before
+            <!-- ::before -->
             <div class="span12" id="col-1-1">
               <div class="colwrapper">
                 <h1 class="super-title">
