--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en-US">
   <head></head>
-  <body class="home page-template-default page page-id-28">
+  <body style="background-color:lightblue;" class="home page-template-default page page-id-28">
     <div class="clear"></div>
     <header class="headwrapper">
       <div class="wrapper" id="wrapper-1">
