--- a/index.html
+++ b/index.html
@@ -10,25 +10,28 @@
             <!-- ::before -->
             <div class="span12" id="col-1-1">
               <div class="colwrapper">
-                <br>
-                <br>
                 <h1 class="super-title">
                   <center>
                     <font class="tve_p_center ttfm1">Nisha Notary Services</font>
                   </center>
                 </h1>
+                
                 <div class="widget widget_text inner-container">
                   <div class="textwidget">
                     <p style="text-align:right;" class="tve_p_center ttfm3">
-                      <strong>"Email Address"</strong>
+                      <!--<strong>"Email Address"</strong>
                       <br>
                       <strong>"Phone Number"</strong>
                       <br>
-                      <strong>"Address"</strong>
+                      <strong>"Address"</strong> -->
+                      <a href ="mailto:nisha.rpk@gmail.com" class="fa fa-envelope" style="font-size:30px;">
+                      <u>nisha.rpk@gmail.com</u>
+                      </a>  
                       <br>
                     </p>
                   </div>
                 </div>
+              
                 </div>
             </div>
           </div>
