--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 
                 <h1 class="super-title">
                   <center>
-                    <font class="tve_p_center ttfm1">Nisha Notary Services</font>
+                    <font class="tve_p_center ttfm1" style="font-size:60px;">Nisha Notary Services</font>
                   </center>
                 </h1>
                 
