--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                       <strong>"Phone Number"</strong>
                       <br>
                       <strong>"Address"</strong> -->
-                      <a href="mailto:nisha.rpk@gmail.com" class="fab fa-envelope" style="font-size:30px;">
+                      <a href="mailto:nisha.rpk@gmail.com" class="fa fa-envelope-o" style="font-size:30px;">
                         <u>nisha.rpk@gmail.com</u>
                       </a>  
                       <br>
