--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                       <br>
                       <strong>"Address"</strong> -->
                       <a href="mailto:nisha.rpk@gmail.com" style="font-size:30px;">
+                        <i class="fa fa-envelope-o"></i>
                         <u>nisha.rpk@gmail.com</u>
                       </a>  
                       <br>
