--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
                     <font class="tve_p_center ttfm1" style="font-size:60px;">Nisha Notary Services</font>
                   </center>
                 </h1>
-                <br>
-                <hr>
-                <br>
+                <hr style="color:red;">
                 <div class="widget widget_text inner-container">
                   <div class="textwidget">
                     <p style="text-align:right;" class="tve_p_center ttfm3">
