--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                       <br>
                       <a href="tel:(678) 654-2660" class="fa fa-phone" style="font-size:30px;">
                        <u> (678) 654-2660</u> 
-                      </a>
+                      </a> 
                       <br>
                       <br>
                       <a style="font-size:30px;" href="https://www.google.com/maps/dir//967+Fulton+St,+Tracy,+CA+95391,+USA/@37.7666089,-121.5875182,13z/data=!4m9!4m8!1m0!1m5!1m1!1s0x80901ed89e2a56b7:0x572823167fd3b2ba!2m2!1d-121.5524987!2d37.7666141!3e0" 
@@ -41,6 +41,8 @@
                          <u>967 S Fulton Street, Mountain House, CA 95391</u> 
                       </a>  
                       <br>
+                      <br>
+                      <strong>Phone# 678-654-2660 </strong>
                       <br>
                     </p>
                   </div>
