--- a/index.html
+++ b/index.html
@@ -42,8 +42,9 @@
                       </a>  
                       <br>
                       <br>
-                      <strong>Phone# 678-654-2660 </strong>
+                      <strong><font style="font-size:30px;">Phone# 678-654-2660 </font></strong>
                       <br>
+                      
                     </p>
                   </div>
                 </div>
