--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                       </a>  
                       <br>
                       <br>
-                      <strong><font style="font-size:30px;">Phone# 678-654-2660 </font></strong>
+                      <strong><font style="font-size:30px; color:blue;">Phone# 678-654-2660 </font></strong>
                       <br>
                       
                     </p>
