--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
                          <u>967 S Fulton Street, Mountain House, CA 95391</u> 
                       </a>  
                       <br>
+                      <hr>
                       <br>
                       <strong><font style="font-size:30px; color:blue;">Phone# 678-654-2660 </font></strong>
                       <br>
-                      
+                      <a href="mailto:nisha.rpk@gmail.com" style="font-size:30px;">
+                        <i class="fa fa-envelope-o"></i>
+                        <u>nisha.rpk@gmail.com</u> 
+                      </a>  
                     </p>
                   </div>
                 </div>
