--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                       <strong><font style="font-size:30px; color:blue;">Phone# 678-654-2660 </font></strong>
                       <br>
                       <a href="mailto:nisha.rpk@gmail.com" style="font-size:30px;">
+                        <strong><font style="font-size:30px; color:blue;">Email Address : </font></strong>
                         <i class="fa fa-envelope-o"></i>
                         <u>nisha.rpk@gmail.com</u> 
                       </a>  
