--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                       <strong>"Phone Number"</strong>
                       <br>
                       <strong>"Address"</strong> -->
+<!-- Method 1 Start -->
                       <a href="mailto:nisha.rpk@gmail.com" style="font-size:30px;">
                         <i class="fa fa-envelope-o"></i>
                         <u>nisha.rpk@gmail.com</u> 
@@ -43,13 +44,16 @@
                       <br>
                       <hr>
                       <br>
+<!-- Method 1 End -->
+<!--Method 2 Start -->
                       <strong><font style="font-size:30px; color:blue;">Phone# 678-654-2660 </font></strong>
                       <br>
                       <a href="mailto:nisha.rpk@gmail.com" style="font-size:30px;">
-                        <strong><font style="font-size:30px; color:blue;">Email Address : </font></strong>
+                        <!--<strong><font style="font-size:30px; color:blue;">Email Address : </font></strong>-->
                         <i class="fa fa-envelope-o"></i>
                         <u>nisha.rpk@gmail.com</u> 
                       </a>  
+ <!-- Method 2 End -->
                     </p>
                   </div>
                 </div>
