--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                       <br>
                       <a style="font-size:30px;" href="https://www.google.com/maps/dir//967+Fulton+St,+Tracy,+CA+95391,+USA/@37.7666089,-121.5875182,13z/data=!4m9!4m8!1m0!1m5!1m1!1s0x80901ed89e2a56b7:0x572823167fd3b2ba!2m2!1d-121.5524987!2d37.7666141!3e0" 
                          class="fa fa-map-marker" target="_blank">
+                        <font style="color:blue;"></font>
                          <u>967 S Fulton Street, Mountain House, CA 95391</u> 
                       </a>  
                       <br>
