--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                       <strong>"Phone Number"</strong>
                       <br>
                       <strong>"Address"</strong> -->
-<!-- Method 1 Start -->
+<!-- Phone Number, Email and Address Starts -->
                       <a href="mailto:nisha.rpk@gmail.com" style="font-size:30px;">
                         <i class="fa fa-envelope-o"></i>
                         <u>nisha.rpk@gmail.com</u> 
@@ -45,9 +45,7 @@
                       </a>  
                       <br>
                       <br>
-                      <hr>
-                      <br>
-<!-- Method 1 End -->
+<!-- Phone Number, Email and Address Ends -->
                     </p>
                   </div>
                 </div>
