--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                           </u1>
                         </div>  <!--div 12 ends -->
                       </div>  <!-- div 11 ends -->
-                      ::after 
+                      <!-- ::after -->
                     </div>  <!-- div 10 ends -->
-                    ::after 
+                    <!-- ::after -->
                   </div>  <!-- div 9 ends -->
                 </div>  <!-- div 8 -->
                       
