--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         <div class="menu-main-menu-container">  <!-- div 12 starts -->
                           <u1 id="menu-main-menu" class="nav">
                             <li id="menu-item-30" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-28 current_page_item">
-                              <a href="https://prsecure.github.io/Senthil.github.io/">Welcome</a>
+                              <a href="https://prsecure.github.io/Senthil.github.io/"><"font-size:30px;">Welcome</font></a>
                             </li>  
                             <li id="menu-item-18" class="menu-item menu-item-type-post_type menu-item-object-page">
                               <a href="https://prsecure.github.io/Senthil.github.io/Notary-Services/">Notary Services</a>
