--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
                       <br>
                       <strong>"Address"</strong> -->
 <!-- Phone Number, Email and Address Starts -->
-                      <a href="mailto:nisha.rpk@gmail.com" style="font-size:30px;">
+                        <a href="tel:(678) 654-2660" class="fa fa-phone" style="font-size:30px;">
+                        <Strong><u> (678) 654-2660</u></strong>
+                        </a>           
+                      <br>
+                      <br>
+                        <a href="mailto:nisha.rpk@gmail.com" style="font-size:30px;">
                         <i class="fa fa-envelope-o"></i>
-                        <u>nisha.rpk@gmail.com</u> 
-                      </a>  
+                        <strong><u>nisha.rpk@gmail.com</u></strong> 
+                        </a> 
                       <br>
                       <br>
-                      <a href="tel:(678) 654-2660" class="fa fa-phone" style="font-size:30px;">
-                       <u> (678) 654-2660</u> 
-                      </a> 
-                      <br>
-                      <br>
-                      <a style="font-size:30px; color:blue;" href="https://www.google.com/maps/dir//967+Fulton+St,+Tracy,+CA+95391,+USA/@37.7666089,-121.5875182,13z/data=!4m9!4m8!1m0!1m5!1m1!1s0x80901ed89e2a56b7:0x572823167fd3b2ba!2m2!1d-121.5524987!2d37.7666141!3e0" 
-                         class="fa fa-map-marker" target="_blank">
-                         <u>967 S Fulton Street, Mountain House, CA 95391</u> 
-                      </a>  
+                        <a style="font-size:30px; color:blue;" href="https://www.google.com/maps/dir//967+Fulton+St,+Tracy,+CA+95391,+USA/@37.7666089,-121.5875182,13z/data=!4m9!4m8!1m0!1m5!1m1!1s0x80901ed89e2a56b7:0x572823167fd3b2ba!2m2!1d-121.5524987!2d37.7666141!3e0" 
+                        class="fa fa-map-marker" target="_blank">
+                        <strong><u>967 S Fulton Street, Mountain House, CA 95391</u></strong> 
+                        </a>  
                       <br>
                       <br>
 <!-- Phone Number, Email and Address Ends -->
