--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                       <br>
                       <strong>"Address"</strong> -->
 <!-- Phone Number, Email and Address Starts -->
-                        <a href="tel:(678) 654-2660" class="fa fa-phone" style="font-size:30px;">
+                        <a href="tel (678) 654-2660" class="fa fa-phone" style="font-size:30px;">
                         <Strong><u> (678) 654-2660</u></strong>
                         </a>           
                       <br>
