--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>  <!--div 6 ends -->
            
 <!-- Grid starts -->
-                <h1 style="background-color:Black; border: 10px; color:white;">Welcome</h1>
+                <h1 style="border: 10px; color:white;">Welcome</h1>
 
 <!-- Grid Ends -->                
                 
