--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 </div>  <!--div 6 ends -->
            
 <!-- Grid starts -->
-                <!-- <h1 style="border: 10px; color:white;">Welcome</h1>  -->
-                <h1 style="border: 2px solid Tomato;">Hello World</h1>
+                <h1 style="background-color:black; border: 10px; color:white;">Welcome</h1> 
+                <!-- <h1 style="border: 2px solid Tomato;">Hello World</h1> -->
 
 
 <!-- Grid Ends -->                
