--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                 </div>  <!--div 6 ends -->
            
 <!-- Grid starts -->
-                <h1 style="background-color:black; border-width: 10px; color:white;">Welcome</h1> 
+                <h1 style="background-color:black; color:white;">
+                  <h1 style="border-width:10px;">Welcome</h1> </h1>
                 <!-- <h1 style="border: 2px solid Tomato;">Hello World</h1> -->
 
 
