--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>  <!--div 6 ends -->
            
 <!-- Grid starts -->
-                <h1 style="background-color:black; color:white;">
+                <h1 style="background-color:black; color:white;">Hello
                   <h1 style="border-width:50px;">Welcome</h1> </h1>
                 <!-- <h1 style="border: 2px solid Tomato;">Hello World</h1> -->
 
