--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
            
 <!-- Grid starts -->
                 <h1 style="background-color:black; border-width: 5px 20px; color:white;">Welcome
-                  <h1 style="border-width:100px;">Hello</h1> </h1>
+                  <h1 style="background-color:black; border-width: 50px 100px; color:white;">Hello</h1> </h1>
                 <!-- <h1 style="border: 2px solid Tomato;">Hello World</h1> -->
 
 
