--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
                 </div>  <!--div 6 ends -->
            
 <!-- Grid starts -->
-                <h1 style="background-color:black; border-width: 5px 20px; color:white;">Welcome
-                  <h1 style="background-color:black; border-width: 500px 1000px; color:white;">Hello
-                    <h1 style="border-width: 50px 100px; color:white;">World
-                    </h1> </h1></h1>
-                <!-- <h1 style="border: 2px solid Tomato;">Hello World</h1> -->
+                <h1 style="background-color:black; color:white;">Welcome </h1>
+                 <!-- <h1 style="background-color:black; border-width: 500px 1000px; color:white;">Hello
+                 <h1 style="border-width: 50px 100px; color:white;">World
+                 </h1> </h1></h1>
+                 <h1 style="border: 2px solid Tomato;">Hello World</h1> -->
 
 
 <!-- Grid Ends -->                
