--- a/index.html
+++ b/index.html
@@ -52,8 +52,20 @@
                 </div>  <!--div 6 ends -->
            
 <!-- Grid starts -->
-                <h1 style="background-color:black; color:white;">Welcome </h1>
-                 <!-- <h1 style="background-color:black; border-width: 500px 1000px; color:white;">Hello
+                div {
+                     border: 2px solid black;
+                     background-color: lightblue;
+                     padding-top: 100px;
+                     padding-right: 60px;
+                     padding-bottom: 100px;
+                     padding-left: 20px;
+                     }
+                <div>
+                     Welcome 
+                </div>
+                 <!-- 
+                 <h1 style="background-color:black; color:white;">Welcome </h1>
+                 <h1 style="background-color:black; border-width: 500px 1000px; color:white;">Hello
                  <h1 style="border-width: 50px 100px; color:white;">World
                  </h1> </h1></h1>
                  <h1 style="border: 2px solid Tomato;">Hello World</h1> -->
