--- a/index.html
+++ b/index.html
@@ -29,8 +29,9 @@
                       <br>
                       <strong>"Address"</strong> -->
 <!-- Phone Number, Email and Address Starts -->
+                        <!-- <strong><font style="font-size:30px; color:blue;">Phone# 678-654-2660 </font></strong>-->
                         <a href="tel : (678) 654-2660" class="fa fa-phone" style="font-size:30px;">
-                        <Strong><u> (678) 654-2660</u></strong>
+                        <Strong><u> Phone# (678) 654-2660</u></strong>
                         </a>           
                       <br>
                       <br>
