--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                       <strong>"Address"</strong> -->
 <!-- Phone Number, Email and Address Starts -->
                         <a href="tel : (678) 654-2660" class="fa fa-phone" style="font-size:30px;">
-                        <Strong><u> Phone# 678-654-2660</u></strong>
+                        <Strong> Phone# 678-654-2660 </strong>
                         </a>           
                       <br>
                       <br>
