--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                         </a>  
                       <br>
                       <br>
+                      "Appiontments available.. Any time, Any day - 24/7.."
 <!-- Phone Number, Email and Address Ends -->
                     </p>  <!-- p1 Ends -->
                   </div>  <!-- div 7 ends -->
