--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         </a>  
                       <br>
                       <br>
-                      "Appiontments available.. Any time, Any day - 24/7.."
+                      <strong> Appiontments available.. Any time, Any day - 24/7.. </strong>
 <!-- Phone Number, Email and Address Ends -->
                     </p>  <!-- p1 Ends -->
                   </div>  <!-- div 7 ends -->
