--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <html lang="en-US">
   <head>
     <title> PR Notary Services </title> 
+    div {
+                     border: 2px solid black;
+                     background-color: lightblue;
+                     padding-top: 100px;
+                     padding-right: 60px;
+                     padding-bottom: 100px;
+                     padding-left: 20px;
+                     }
   </head>
   <body style="background-color:lightblue;" class="home page-template-default page page-id-28">
     <div class="clear"></div>
@@ -46,21 +54,13 @@
                         </a>  
                       <br>
                       <br>
-                      <strong> Appiontments available.. Any time, Any day - 24/7.. </strong>
+                      <strong> <font="font-size:30px;">Appiontments available.. Any time, Any day - 24/7.. </font></strong>
 <!-- Phone Number, Email and Address Ends -->
                     </p>  <!-- p1 Ends -->
                   </div>  <!-- div 7 ends -->
                 </div>  <!--div 6 ends -->
            
 <!-- Grid starts -->
-                div {
-                     border: 2px solid black;
-                     background-color: lightblue;
-                     padding-top: 100px;
-                     padding-right: 60px;
-                     padding-bottom: 100px;
-                     padding-left: 20px;
-                     }
                 <div>
                      Welcome 
                 </div>
