--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         </a>  
                       <br>
                       <br>
-                      <strong> <font="font-size:30px;">Appiontments available.. Any time, Any day - 24/7.. </font></strong>
+                      <strong> <font="font-size:30px; color:blue;">Appiontments available.. Any time, Any day - 24/7.. </font></strong>
 <!-- Phone Number, Email and Address Ends -->
                     </p>  <!-- p1 Ends -->
                   </div>  <!-- div 7 ends -->
