--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <html lang="en-US">
   <head>
     <title> PR Notary Services </title> 
-    div {
+    <!-- div {
                      border: 2px solid black;
                      background-color: lightblue;
                      padding-top: 100px;
                      padding-right: 60px;
                      padding-bottom: 100px;
                      padding-left: 20px;
-                     }
+                     }  -->
   </head>
   <body style="background-color:lightblue;" class="home page-template-default page page-id-28">
     <div class="clear"></div>
@@ -54,22 +54,19 @@
                         </a>  
                       <br>
                       <br>
-                      <strong> <font="font-size:30px; color:blue;">Appiontments available.. Any time, Any day - 24/7.. </font></strong>
+                      <strong> <a style="font-size:30px; color:blue;">Appiontments available.. Any time, Any day - 24/7.. </a></strong>
 <!-- Phone Number, Email and Address Ends -->
                     </p>  <!-- p1 Ends -->
                   </div>  <!-- div 7 ends -->
                 </div>  <!--div 6 ends -->
            
 <!-- Grid starts -->
-                <div>
-                     Welcome 
-                </div>
-                 <!-- 
+                 
                  <h1 style="background-color:black; color:white;">Welcome </h1>
                  <h1 style="background-color:black; border-width: 500px 1000px; color:white;">Hello
                  <h1 style="border-width: 50px 100px; color:white;">World
                  </h1> </h1></h1>
-                 <h1 style="border: 2px solid Tomato;">Hello World</h1> -->
+                 <h1 style="border: 2px solid Tomato;">Hello World</h1> 
 
 
 <!-- Grid Ends -->                
