--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 
                 <h1 class="super-title">
                   <center>
-                    <font class="tve_p_center ttfm1" style="font-size:60px;">24/7 Nisha Notary Services</font>
+                    <font class="tve_p_center ttfm1" style="font-size:60px;">Nisha Notary Services</font>
                   </center>
                 </h1>
                 
@@ -54,7 +54,7 @@
                         </a>  
                       <br>
                       <br>
-                      <strong> <a style="font-size:30px; color:blue;">Appiontments Available.. Any day, Any time.. </a></strong>
+                      <strong> <a style="font-size:30px; color:blue;">Appiontments Available.. Any day, Any time..24/7 </a></strong>
 <!-- Phone Number, Email and Address Ends -->
                     </p>  <!-- p1 Ends -->
                   </div>  <!-- div 7 ends -->
