--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                   </center>
                 </h1> 
                 
-                <hr style="color:red;">
+                <!-- <hr style="color:red;"> -->
                 <div class="widget widget_text inner-container">  <!-- div 6 starts -->
                   <div class="textwidget">  <!-- div 7 starts -->
                     <p style="text-align:right;" class="tve_p_center ttfm3"> <!-- P1 starts -->
