--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                       <br>
                       <br>
                       <strong> <a style="font-size:30px; color:blue;">Appiontments Available.. Any day, Any time..24/7 </a></strong>
+                      <br>
+                      <br>
+                      <strong> <a style="font-size:30px; color:blue;">24/7 Appiontments Available.. Any day, Any time.. </a></strong>
+
 <!-- Phone Number, Email and Address Ends -->
                     </p>  <!-- p1 Ends -->
                   </div>  <!-- div 7 ends -->
@@ -62,7 +66,11 @@
            
 <!-- Grid starts -->
                  
-                 <h1 style="background-color:black; color:white;">Welcome </h1>
+                <h1 style="background-color:black; color:white;">
+                  <li id="menu-item-30" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-28 current_page_item">
+                  <a href="https://prsecure.github.io/Senthil.github.io/"><font ="font-size:50px;">Welcome</font></a>
+                  </li>  
+                </h1>
                  <!--<h1 style="background-color:black; border-width: 500px 1000px; color:white;">Hello
                  <h1 style="border-width: 50px 100px; color:white;">World
                  </h1> </h1></h1>
