--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
 <!-- Grid starts -->
                  
                 <h1 style="background-color:black; color:white;">
-                  <li id="menu-item-30" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-28 current_page_item">
-                  <a href="https://prsecure.github.io/Senthil.github.io/"><font ="font-size:50px;">Welcome</font></a>
+                  <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-28 current_page_item">
+                  <a href="https://prsecure.github.io/Senthil.github.io/"><font ="font-size:50px; color:white;">Welcome</font></a>
                   </li>  
                 </h1>
                  <!--<h1 style="background-color:black; border-width: 500px 1000px; color:white;">Hello
