--- a/index.html
+++ b/index.html
@@ -66,10 +66,8 @@
            
 <!-- Grid starts -->
                  
-                <h1 style="background-color:black; color:white;">
-                  <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-28 current_page_item">
-                  <a href="https://prsecure.github.io/Senthil.github.io/"><font ="font-size:50px; color:white;">Welcome</font></a>
-                  </li>  
+                <h1 style="background-color:black;">
+                  <a href="https://prsecure.github.io/Senthil.github.io/"><font ="font-size:50px; color:white;">Welcome</font></a>  
                 </h1>
                  <!--<h1 style="background-color:black; border-width: 500px 1000px; color:white;">Hello
                  <h1 style="border-width: 50px 100px; color:white;">World
