--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <!-- Grid starts -->
                  
                 <h1 style="background-color:black;">
-                  <a href="https://prsecure.github.io/Senthil.github.io/"><font ="font-size:50px; color:white;">Welcome</font></a>  
+                  <a href="https://prsecure.github.io/Senthil.github.io/"><font ="font-size:30px;"> <a style="color:white;">Welcome</a></font></a>  
                 </h1>
                  <!--<h1 style="background-color:black; border-width: 500px 1000px; color:white;">Hello
                  <h1 style="border-width: 50px 100px; color:white;">World
