--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <br>
                 <br>
                 <h1 style="background-color:black;">
-                  <a href="https://prsecure.github.io/Senthil.github.io/"><font ="font-size:10px; color:white;"> Welcome </font></a>  
+                  <a href="https://www.google.com/"><font ="font-size:10px; color:white;"> Welcome </font></a>  
                 </h1>
                  <!--<h1 style="background-color:black; border-width: 500px 1000px; color:white;">Hello
                  <h1 style="border-width: 50px 100px; color:white;">World
