--- a/index.html
+++ b/index.html
@@ -67,12 +67,12 @@
 <!-- Grid starts -->
                  
                 <h1 style="background-color:black;">
-                  <a href="https://prsecure.github.io/Senthil.github.io/"><font ="font-size:10px;"> <a style="color:white;">Welcome</a></font></a>  
+                  <a href="https://prsecure.github.io/Senthil.github.io/" style="color:white;" font ="font-size:10px;"> Welcome </a>  
                 </h1>
                 <br>
                 <br>
                 <h1 style="background-color:black;">
-                  <a href="https://www.google.com/" style="color:white;"><font ="font-size:10px;"> Welcome </font></a>  
+                  <a href="https://www.google.com/" style="color:white;" font ="font-size:5px;"> Welcome </a>  
                 </h1>
                  <!--<h1 style="background-color:black; border-width: 500px 1000px; color:white;">Hello
                  <h1 style="border-width: 50px 100px; color:white;">World
