--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
                      padding-bottom: 100px;
                      padding-left: 20px;
                      }  -->
+    <style>
+      li {
+      display: inline;
+      }
+    </style>
   </head>
   <body style="background-color:lightblue;" class="home page-template-default page page-id-28">
     <div class="clear"></div>
