--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <br>
                 <br>
                 <h1 style="background-color:black;">
-                  <a href="https://www.google.com/" style="color:white;" font ="font-size:5px;"> Welcome </a>  
+                  <a href="#Welcome" style="color:white;" font ="font-size:5px;"> Welcome </a>  
                 </h1>
                  <!--<h1 style="background-color:black; border-width: 500px 1000px; color:white;">Hello
                  <h1 style="border-width: 50px 100px; color:white;">World
@@ -116,7 +116,7 @@
                     </div>  <!-- div 10 ends -->
                     <!-- ::after -->
                   </div>  <!-- div 9 ends -->
-                </div>  <!-- div 8 -->
+                </div>  <!-- div 8 ends-->
                       
                 <div class="clearfix">  <!-- div 13 starts -->
                   <!-- ::before -->
