--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <br>
                 <br>
                 <h1 style="background-color:black;">
-                  <a href="#Welcome" style="color:white;" font ="font-size:5px;"> Welcome </a>  
+                  <a class="page-scroll" href="#Welcome" style="color:white;" font ="font-size:5px;"> Welcome </a>  
                 </h1>
                  <!--<h1 style="background-color:black; border-width: 500px 1000px; color:white;">Hello
                  <h1 style="border-width: 50px 100px; color:white;">World
