--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 
 <!-- Grid Ends -->                
-                
+                <nav class="navbar navbar-custom navbar-fixed-top top-nav-collapse" role="navigation">
                 <div class="navbar navbar-inverse"> <!--div 8 starts -->
                   <div class="navbar-inner">  <!-- div 9 starts -->
                   <!-- ::before -->
@@ -117,6 +117,7 @@
                     <!-- ::after -->
                   </div>  <!-- div 9 ends -->
                 </div>  <!-- div 8 ends-->
+                </nav>
                       
                 <div class="clearfix">  <!-- div 13 starts -->
                   <!-- ::before -->
