--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
                  <h1 style="border: 2px solid Tomato;">Hello World</h1> 
 <!-- Grid Ends   
 -->
-                
+                <br>
+                <hr style="color:red;">
+                <br>
                 <div class="navbar navbar-inverse"> <!--div 8 starts -->
                   <div class="navbar-inner">  <!-- div 9 starts -->
                   <!-- ::before -->
@@ -101,7 +103,7 @@
                         <div class="menu-main-menu-container">  <!-- div 12 starts -->
                           <u1 id="menu-main-menu" class="nav">
                             <li id="menu-item-30" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-28 current_page_item">
-                              <a href="https://prsecure.github.io/Senthil.github.io/"><font ="font-size:50px;">Welcome</font></a>
+                              <a href="https://prsecure.github.io/Senthil.github.io/" font ="font-size:50px;">Welcome</a>
                             </li>  
                             <li id="menu-item-18" class="menu-item menu-item-type-post_type menu-item-object-page">
                               <a href="https://prsecure.github.io/Senthil.github.io/Notary-Services/">Notary Services</a>
