--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                   <center>
                     <strong> <font class="tve_p_center ttfm1" style="font-size:60px;">24/7 Appiontments Available.. Any day, Any time.. </strong>
                    
-                <!-- <hr style="color:red;"> -->
+                <hr style="color:red;"> 
                 <div class="widget widget_text inner-container">  <!-- div 6 starts -->
                   <div class="textwidget">  <!-- div 7 starts -->
                     <p style="text-align:right;" class="tve_p_center ttfm3"> <!-- P1 starts -->
