--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </h1> 
                 <h1 class="super-title">
                   <center>
-                    <strong> <font class="tve_p_center ttfm1" style="font-size:60px;">24/7 Appiontments Available.. Any day, Any time.. </strong>
+                    <font class="tve_p_center ttfm1" style="font-size:60px;">24/7 Appiontments Available.. Any day, Any time.. 
                    
                 <hr style="color:red;"> 
                 <div class="widget widget_text inner-container">  <!-- div 6 starts -->
