--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </h1> 
                 <h1 class="super-title">
                   <center>
-                    <font class="tve_p_center ttfm1" style="font-size:60px;">24/7 Appiontments Available.. Any day, Any time.. 
+                    <font class="tve_p_center ttfm1" style="font-size:60px;">24/7 Appointments Available.. Any day, Any time.. 
                    
                 <hr style="color:red;"> 
                 <div class="widget widget_text inner-container">  <!-- div 6 starts -->
@@ -49,23 +49,19 @@
                         <Strong> Phone# 678-654-2660 </strong>
                         </a>           
                       <br>
-                      <br>
                         <a href="mailto:nisha.rpk@gmail.com" style="font-size:30px;">
                         <i class="fa fa-envelope-o"></i>
                         <strong><u>nisha.rpk@gmail.com</u></strong> 
                         </a> 
-                      <br>
                       <br>
                         <a style="font-size:30px; color:blue;" href="https://www.google.com/maps/dir//967+Fulton+St,+Tracy,+CA+95391,+USA/@37.7666089,-121.5875182,13z/data=!4m9!4m8!1m0!1m5!1m1!1s0x80901ed89e2a56b7:0x572823167fd3b2ba!2m2!1d-121.5524987!2d37.7666141!3e0" 
                         class="fa fa-map-marker" target="_blank">
                         <strong><u>967 S Fulton Street, Mountain House, CA 95391</u></strong> 
                         </a>  
                       <br>
+                      <strong> <a style="font-size:30px; color:blue;">Appointments Available.. Any day, Any time..24/7 </a></strong>
                       <br>
-                      <strong> <a style="font-size:30px; color:blue;">Appiontments Available.. Any day, Any time..24/7 </a></strong>
-                      <br>
-                      <br>
-                      <strong> <a style="font-size:30px; color:blue;">24/7 Appiontments Available.. Any day, Any time.. </a></strong>
+                      <strong> <a style="font-size:30px; color:blue;">24/7 Appointments Available.. Any day, Any time.. </a></strong>
 
 <!-- Phone Number, Email and Address Ends -->
                     </p>  <!-- p1 Ends -->
