--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                 <h1 class="super-title">
                   <center>
                     <font class="tve_p_center ttfm1" style="font-size:60px;">24/7 Appointments Available.. Any day, Any time.. 
-                   
-                <!--<hr style="color:red;"> -->
+                 </h1>  
+                <hr style="color:red;"> 
                 <div class="widget widget_text inner-container">  <!-- div 6 starts -->
                   <div class="textwidget">  <!-- div 7 starts -->
                     <p style="text-align:right;" class="tve_p_center ttfm3"> <!-- P1 starts -->
