--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <h1 class="super-title">
                   <center>
                     <font class="tve_p_center ttfm1" style="font-size:60px;">24/7 Appointments Available.. Any day, Any time.. 
+                  </center>    
                  </h1>  
                 <hr style="color:red;"> 
                 <div class="widget widget_text inner-container">  <!-- div 6 starts -->
