--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </h1> 
                 <h1 class="super-title">
                   <center>
-                    <font class="tve_p_center ttfm1" style="font-size:60px;">24/7 Appointments Available.. Any day, Any time.. 
+                    <font class="tve_p_center ttfm1" style="font-size:60px;">24/7 Appointments Available.. Any day, Any time.. </font>
                   </center>    
                  </h1>  
                 <hr style="color:red;"> 
