--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                         <strong><u>967 S Fulton Street, Mountain House, CA 95391</u></strong> 
                         </a>  
                       <br><br>
-                      <strong> <a style="font-size:30px; color:blue;">Appointments Available.. Any day, Any time..24/7 </a></strong>
+                      <!--<strong> <a style="font-size:30px; color:blue;">Appointments Available.. Any day, Any time..24/7 </a></strong>-->
                       <br><br>
-                      <strong> <a style="font-size:30px; color:blue;">24/7 Appointments Available.. Any day, Any time.. </a></strong>
+                      <!--<strong> <a style="font-size:30px; color:blue;">24/7 Appointments Available.. Any day, Any time.. </a></strong>-->
 
 <!-- Phone Number, Email and Address Ends -->
                     </p>  <!-- p1 Ends -->
@@ -106,10 +106,10 @@
                               <a href="https://prsecure.github.io/Senthil.github.io/" style="font-size:30px;" style="color:white;">Welcome</a>
                             </li>  
                             <li id="menu-item-18" class="menu-item menu-item-type-post_type menu-item-object-page">
-                              <a href="https://prsecure.github.io/Senthil.github.io/Notary-Services/">Notary Services</a>
+                              <a href="https://prsecure.github.io/Senthil.github.io/Notary-Services/" style="font-size:20px;" style="color:green;">Notary Services</a>
                             </li>
                             <li id="menu-item-20" class="menu-item menu-item-type-post_type menu-item-object-page">
-                              <a href="https://prsecure.github.io/Senthil.github.io/Mobile-Notary-Services/">Mobile Notary Services</a>
+                              <a href="https://prsecure.github.io/Senthil.github.io/Mobile-Notary-Services/" style="font-size:10px;" style="color:purple;">Mobile Notary Services</a>
                             </li>
                           </u1>
                         </div>  <!--div 12 ends -->
