--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
                 <br>
                 <hr style="color:red;">
                 <br>
+                <h1 style="background-color:black;">
                 <div class="navbar navbar-inverse"> <!--div 8 starts -->
                   <div class="navbar-inner">  <!-- div 9 starts -->
                   <!-- ::before -->
@@ -119,7 +120,7 @@
                     <!-- ::after -->
                   </div>  <!-- div 9 ends -->
                 </div>  <!-- div 8 ends-->
-                </nav>
+                </h1>
                       
                 <div class="clearfix">  <!-- div 13 starts -->
                   <!-- ::before -->
