--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <div class="menu-main-menu-container">  <!-- div 12 starts -->
                           <u1 id="menu-main-menu" class="nav">
                             <li id="menu-item-30" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-28 current_page_item">
-                              <a href="https://prsecure.github.io/Senthil.github.io/" style="font-size:30px;" style="color:white;">Welcome</a>
+                              <a href="https://prsecure.github.io/Senthil.github.io/" style="font-size:30px; color:white;">Welcome</a>
                             </li>  
                             <li id="menu-item-18" class="menu-item menu-item-type-post_type menu-item-object-page">
                               <a href="https://prsecure.github.io/Senthil.github.io/Notary-Services/" style="font-size:30px;" style="color:white;">Notary Services</a>
