--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                               <a href="https://prsecure.github.io/Senthil.github.io/" style="font-size:30px; color:white;">Welcome</a>
                             </li>  
                             <li id="menu-item-18" class="menu-item menu-item-type-post_type menu-item-object-page">
-                              <a href="https://prsecure.github.io/Senthil.github.io/Notary-Services/" style="font-size:30px;" style="color:white;">Notary Services</a>
+                              <a href="https://prsecure.github.io/Senthil.github.io/Notary-Services/" style="font-size:30px; color:white;">Notary Services</a>
                             </li>
                             <li id="menu-item-20" class="menu-item menu-item-type-post_type menu-item-object-page">
-                              <a href="https://prsecure.github.io/Senthil.github.io/Mobile-Notary-Services/" style="font-size:30px;" style="color:white;">Mobile Notary Services</a>
+                              <a href="https://prsecure.github.io/Senthil.github.io/Mobile-Notary-Services/" style="font-size:30px; color:white;">Mobile Notary Services</a>
                             </li>
                           </u1>
                         </div>  <!--div 12 ends -->
