--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
 -->
                 <br>
                 <hr style="color:red;">
-                <h1 style="background-color:black;">
+                <h1 style="background-color:black; padding-top: 100px;">
+>
                 <div class="navbar navbar-inverse"> <!--div 8 starts -->
                   <div class="navbar-inner">  <!-- div 9 starts -->
                   <!-- ::before -->
@@ -102,12 +103,18 @@
                       <div class="nav-collapse collapse"> <!-- div 11 starts -->
                         <div class="menu-main-menu-container">  <!-- div 12 starts -->
                           <u1 id="menu-main-menu" class="nav">
+                            <li>  &nbsp </li>
+                            <li>  &nbsp </li>
                             <li id="menu-item-30" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-28 current_page_item">
                               <a href="https://prsecure.github.io/Senthil.github.io/" style="font-size:30px; color:white;">Welcome</a>
                             </li>  
+                            <li>  &nbsp </li>
+                            <li>  &nbsp </li>
                             <li id="menu-item-18" class="menu-item menu-item-type-post_type menu-item-object-page">
                               <a href="https://prsecure.github.io/Senthil.github.io/Notary-Services/" style="font-size:30px; color:white;">Notary Services</a>
                             </li>
+                            <li>  &nbsp </li>
+                            <li>  &nbsp </li>
                             <li id="menu-item-20" class="menu-item menu-item-type-post_type menu-item-object-page">
                               <a href="https://prsecure.github.io/Senthil.github.io/Mobile-Notary-Services/" style="font-size:30px; color:white;">Mobile Notary Services</a>
                             </li>
