--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 -->
                 <br>
                 <hr style="color:red;">
-                <h1 style="background-color:black; padding-top: 20px;">
+                <h1 style="background-color:black; padding-top: 13px; padding-bottom: 13px; padding-right: 30px; padding-left: 30px;">
 >
                 <div class="navbar navbar-inverse"> <!--div 8 starts -->
                   <div class="navbar-inner">  <!-- div 9 starts -->
