--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 -->
                 <br>
                 <hr style="color:red;">
-                <h1 style="background-color:black; padding-top: 100px; padding-bottom: 100px; padding-right: 200px; padding-left: 200px;">
+                <h1 style="background-color:black; margin-top: 100px; margin-bottom: 100px; margin-right: 200px; margin-left: 200px;">
 >
                 <div class="navbar navbar-inverse"> <!--div 8 starts -->
                   <div class="navbar-inner">  <!-- div 9 starts -->
