--- a/index.html
+++ b/index.html
@@ -33,9 +33,14 @@
                 </h1> 
                 <h1 class="super-title">
                   <center>
-                    <font class="tve_p_center ttfm1" style="font-size:50px;">24/7 Appointments Available.. Any day, Any time.. </font>
+                    <font class="tve_p_center ttfm1" style="font-size:30px;">24/7 Appointments Available.. Any day, Any time.. </font>
                   </center>    
-                 </h1>  
+                 </h1> 
+                <h1 class="super-title">
+                  <center>
+                    <font class="tve_p_center ttfm1" style="font-size:30px;">$4 per signatures. Mobile charges are different. Please call for pricing and appointemnts. </font>
+                  </center>    
+                 </h1> 
                 <hr style="color:red;"> 
                 <div class="widget widget_text inner-container">  <!-- div 6 starts -->
                   <div class="textwidget">  <!-- div 7 starts -->
