--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                  </h1> 
                 <h1 class="super-title">
                   <center>
-                    <font class="tve_p_center ttfm1" style="font-size:30px;">$4 per signatures. Mobile charges are different. Please call for pricing and appointemnts. </font>
+                    <font class="tve_p_center ttfm1" style="font-size:30px;">$4 per signatures. Mobile charges are different. Please call for pricing and appointments. </font>
                   </center>    
                  </h1> 
                 <hr style="color:red;"> 
