--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                  <h1 style="border: 2px solid Tomato;">Hello World</h1> 
 <!-- Grid Ends   
 -->
+<!-- Welcome, Notary Services, Mobile Notary Services, and Contact Starts-->
                 <hr style="color:red;">
                 <h1 style="background-color:black; margin-top: 25px; margin-bottom: 26px; margin-right: 530px; margin-left: 550px;">
                 <div class="navbar navbar-inverse"> <!--div 8 starts -->
@@ -99,6 +100,7 @@
                     <div class="container"> <!-- div 10 starts -->
                     <!-- ::before -->  
                       <a class="btn btn-navbar cc_pointer" data-toggle="collapse" data-target=".nav-collapse">
+                        <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -124,6 +126,12 @@
                             <li id="menu-item-20" class="menu-item menu-item-type-post_type menu-item-object-page">
                               <a href="https://prsecure.github.io/Senthil.github.io/Mobile-Notary-Services/" style="font-size:20px; color:white;">Mobile Notary Services</a>
                             </li>
+                            <li>  &nbsp </li>
+                            <li>  &nbsp </li>
+                            <li>  &nbsp </li>
+                            <li class>
+                              <a class="page-scroll" href="#contact"> Contact </a>
+                            </li>  
                           </u1>
                         </div>  <!--div 12 ends -->
                       </div>  <!-- div 11 ends -->
@@ -133,7 +141,7 @@
                   </div>  <!-- div 9 ends -->
                 </div>  <!-- div 8 ends-->
                 </h1>
-                      
+<!-- Welcome, Notary Services, Mobile Notary Services, and Contact Ends -->                
                 <div class="clearfix">  <!-- div 13 starts -->
                   <!-- ::before -->
                   <!-- ::after -->
