--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <li>  &nbsp </li>
                             <li>  &nbsp </li>
                             <li class>
-                              <a class="page-scroll" href="#contact"> Contact </a>
+                              <a class="page-scroll" href="#contact" style="font-size:20px; color:white;"> Contact </a>
                             </li>  
                           </u1>
                         </div>  <!--div 12 ends -->
