--- a/index.html
+++ b/index.html
@@ -169,11 +169,15 @@
           </a>
           <br>
           <a href="mailto:nisha.rpk@gmail.com" class="fa fa-envelope" style="font-size:25px;">
-             "nisha.rpk@gmail.com" 
+            :before
+            "
+             nisha.rpk@gmail.com 
+            "
           </a> 
           <br>
            <a href="tel : (678) 654-2660" class="fa fa-phone" style="font-size:25px;">
-              "678-654-2660"
+             :before
+              678-654-2660
            </a>           
            <br>
          </div>
