--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
       display: inline;
       }
     </style>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="canonical" href="Senthil.github.io">
+    
   </head>
   <body style="background-color:lightblue;" class="home page-template-default page page-id-28">
     <div class="clear"></div>
