--- a/index.html
+++ b/index.html
@@ -168,23 +168,21 @@
           <br>
           <a></a>
           <br>
+          <center>
           <a style="font-size:25px" href="https://www.google.com/maps/dir//967+Fulton+St,+Tracy,+CA+95391,+USA/@37.7666089,-121.5875182,13z/data=!4m9!4m8!1m0!1m5!1m1!1s0x80901ed89e2a56b7:0x572823167fd3b2ba!2m2!1d-121.5524987!2d37.7666141!3e0" 
                         class="fa fa-map-marker" class="fa fa-map-marker" target="_blank">
-            "967 S Fulton Street, Mountain House, CA 95391"
+            967 S Fulton Street, Mountain House, CA 95391
           </a>
           <br>
           <a href="mailto:nisha.rpk@gmail.com" class="fa fa-envelope" style="font-size:25px;">
-            :before
-            "
-             nisha.rpk@gmail.com 
-            "
+             nisha.rpk@gmail.com
           </a> 
           <br>
            <a href="tel : (678) 654-2660" class="fa fa-phone" style="font-size:25px;">
-             :before
               678-654-2660
            </a>           
            <br>
+          </center>
          </div>
           <table>
             
